--- a/scratch.html
+++ b/scratch.html
@@ -9,9 +9,10 @@
   src="https://code.jquery.com/jquery-3.7.1.js"
   integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
   crossorigin="anonymous"></script>
+  <script src ="./app.js" defer></script>
+  <link rel="stylesheet" href="./style.css">
     <!-- YOUR FILES -->
 </head>
 <body>
-    
 </body>
 </html>
