--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     <header>
         <h1>Cliché Bank</h1>
     </header>
-    <main>
-
+    <main class="buttons">
+        <div class="form">
+            <form>
+              <h3>Fall in love with a new cliché... today!</h3>
+              <input type="text" name="quote" placeholder="search cliché here" />
+              <button>Search Cliché</button>
+            </form>
+        </div>
+   
+        <div>
+            <input type="text" name="random" placeholder="search random quote" />
+            <button>Random Cliché</button>
+        </div>
     </main>
+    <div class="quote"></div>
     <footer>
 
     </footer>
