--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </main>
     <div class="quote"></div>
     <footer>
-
-    </footer>
+<a href="//github.com/lukePeavey/quotable">Api was provided here. </a></footer>
 </body>
 </html>
