got random quotes to appear by clicking random

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </div>
    
         <div>
-            <input type="text" name="random" placeholder="search random quote" />
-            <button>Random Cliché</button>
+            <h3>Need Inspiration?</h3>
+            <button onclick="randomQuote()">Random Cliché</button>
+            <div class="random"></div>
         </div>
-    </main>
-    <div class="quote"></div>
+    <div class="quote"></div> </main>
     <footer>
 <a href="//github.com/lukePeavey/quotable">Api was provided here. </a></footer>
 </body>
