got searched JSON to show up on screen

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
               <h3>Fall in love with a new cliché... today!</h3>
               <input type="text" name="quote" placeholder="search cliché here" />
               <button>Search Cliché</button>
-            </form>
+              
+            </form><div class="search"></div>
         </div>
    
         <div>
