got functionality down

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
               <h3>Fall in love with a new cliché... today!</h3>
               <input type="text" name="quote" placeholder="search cliché here" />
               <button>Search Cliché</button>
-              
-            </form><div class="search"></div>
+              <div class="search"></div>
+            </form>
         </div>
    
         <div>
