--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main class="buttons">
         <div class="form">
             <form>
-              <h3>Fall in love with a new cliché... today!</h3>
-              <input type="text" name="quote" placeholder="search cliché here" />
+              <h3 class="tagline">Fall in love with a new cliché... today!</h3>
+              <input type="text" onfocus="this.value=''" name="quote" placeholder="search cliché here" />
               <button>Search Cliché</button>
               <div class="search"></div>
             </form>
