--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <form>
               <h3 class="tagline">Fall in love with a new cliché... today!</h3>
               <input type="text" onfocus="this.value=''" name="quote" placeholder="search cliché here" />
-              <button>Search Cliché</button>
+              <button class="button">Search Cliché</button>
               <div class="search"></div>
             </form>
         </div>
