fixed mobile zoom

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <input type="text" onfocus="this.value=''" name="quote" placeholder="search cliché here" />
               <button class="button">Search Cliché</button>
               <div class="search"></div>
+              <meta name="viewport" content= "width=device-width, user-scalable=no">
             </form>
         </div>
    
